--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.19",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
+    "install": "^0.13.0",
     "modern-normalize": "^3.0.1",
-    "react": "^19.2.0",
+    "npm": "^11.7.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.0",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "react-paginate": "^8.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
